--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -7,7 +7,7 @@ layout: page
 {% assign df_strftime_m = site.data.locales[lang].df.archives.strftime | default: '/ %m' %}
 {% assign df_dayjs_m = site.data.locales[lang].df.archives.dayjs | default: '/ MM' %}
 
-<div id="archives" class="pl-xl-3">
+<div id="news">
   {% if site.news and site.news != empty %}
     {% assign items = site.news %}
   {% else %}
