--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -36,8 +36,7 @@ layout: page
 
   <div class="news-toolbar mb-4 d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center flex-wrap gap-3">
-      <div id="news-cats" class="d-flex flex-wrap gap-2 me-2"></div>
-      <div id="news-titles" class="d-flex flex-wrap gap-3"></div>
+      <div id="news-cats" class="d-flex flex-wrap gap-2"></div>
     </div>
 
     <div id="news-controls" class="d-flex align-items-center">
