修复 jekyll-theme-chirpy.scss 中的格式问题，简化环境判断语句

--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -1,8 +1,4 @@
 ---
 ---
 
-@use 'main
-{%- if jekyll.environment == ' production ' -%}
-  .bundle
-{%- endif -%}
-';
+@use 'main{%- if jekyll.environment == ' production ' -%}.bundle{%- endif -%}';
