--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -1,4 +1,10 @@
 ---
 ---
 
-@use 'main{%- if jekyll.environment == ' production ' -%}.bundle{%- endif -%}';
+@use 'main
+{%- if jekyll.environment == 'production' -%}
+  .bundle
+{%- endif -%}
+';
+
+/* append your custom style below */
