--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -30,8 +30,8 @@
     .btn.btn-secondary,
     .btn.btn-outline-secondary.active {
       color: #fff !important;
-      background-color: var(--bs-primary, #6c757d) !important;
-      border-color: var(--bs-primary, #6c757d) !important;
+      background-color: #6c757d !important;
+      border-color: #6c757d !important;
       box-shadow: none !important;
     }
 
